# operator-pipelines

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .tektonlintrc.yaml  .yamllint  2  404.html  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ansible.cfg  coverage.json  docker-compose.yml  dpl-config.json  htpasswd-community.txt  htpasswd-notes.txt  index.html  integration-tests-config-sample.yaml  mkdocs.yml  pyproject.toml  release-and-rollback.md  requirements.txt  setup.py  tox.ini
.ci/: run-shellcheck.sh
.github/: Dockerfile  dependabot.yml  pull_request_template.md
.github/workflows/: build-and-test.yml  build-image.yml  build-multi-arch-image.yml  build-ppc64le-image.yml  build-signing-bundle.yml  community-kind.yml  community.yml  deploy.yml  documentation.yaml  e2e.yml  integration-tests.yml  main-image.yml  main.yml  ppc64le-image.yml  release-image.yml  validation.yml
.tekton/: konflux-test-operator-pipelines-pull-request.yaml  konflux-test-operator-pipelines-push.yaml
ansible/: ansible.cfg  init-custom-env.sh  init.sh
ansible/inventory/: clusters  operator-pipeline  operator-pipeline-dev  operator-pipeline-integration-tests  operator-pipeline-prod  operator-pipeline-qa  operator-pipeline-stage  operator-pipeline.yml
ansible/playbooks/: ansible.cfg  community-operators-integration-tests.yaml  config-ocp-cluster.yml  deploy-index-signature-verification.yml  deploy-playground.yml  deploy-preflight-invalidation.yml  deploy.yml  operator-pipeline-env-setup.yml  operator-pipeline-integration-tests.yml  requirements.yml  upstream-community-config.yaml  upstream-community.yaml
bootstrap-signing/: index.html
catalog_image_browser/: index.html
ci-cd/: index.html
cluster-config/: index.html
developer-guide/: index.html
docs/: README.md  bootstrap-signing.md  catalog_image_browser.md  ci-cd.md  cluster-config.md  community-operators-troubleshooting.md  developer-guide.md  fbc-catalog-promotion.md  fbc_onboarding.md  first-time-run.md  github-actions.md  index-signature-verification.md  kind-cluster.md  local-dev-environment.md  local-dev.md  ocp-namespace-config.md  pipeline-admin-guide.md  pipeline-env-setup.md  preflight-invalidation.md  release-and-rollback.md  rhc4tp-cluster.md  secrets.md  tekton-when-condition-guidelines.md  webhook-dispatcher.md  webhook-dispatecher.md
docs/users/: community-operators-troubleshooting.md  contributing-via-pr.md  contributing-where-to.md  dynamic_checks.md  fbc_autorelease.md  fbc_onboarding.md  fbc_workflow.md  isv_pipelines.md  operator-ci-yaml.md  pipelines_overview.md  static_checks.md
fbc/: Makefile  render_catalogs.sh
fbc-catalog-promotion/: index.html
index-signature-verification/: index.html
local-dev/: pip-audit-parse.py  pip-audit.sh
local-dev-environment/: index.html
ocp-namespace-config/: index.html
operator-pipeline-images/: .coveragerc  .dockerignore  Dockerfile  Dockerfile-ppc64le  Dockerfile-s390x  README.md  index-image-paths.txt  requirements-dev.txt  requirements.txt  setup.py  tox.ini
operator-pipeline-images/certs/: Eng-CA.crt
operator-pipeline-images/config/: dispatcher_config.yaml  krb5.conf
operator-pipeline-images/hacks/: retry-command.sh
operator-pipeline-images/operatorcert/: __init__.py  buildah.py  bundle.py  github.py  hydra.py  iib.py  logger.py  oidc_client.py  oidcc_client.py  operator_repo.py  opm.py  parsed_file.py  pyxis.py  tekton.py  umb.py  utils.py
operator-pipeline-images/tests/: conftest.py  test_buildah.py  test_bundle.py  test_github.py  test_iib.py  test_oidc_client.py  test_oidcc_client.py  test_operator_repo.py  test_operatorcert.py  test_opm.py  test_parsed_file.py  test_pyxis.py  test_tekton.py  test_umb.py  test_utils.py  utils.py
operatorcert/: __init__.py  github.py  hydra.py  iib.py  merge_base_lane.py  pyxis.py  utils.py
operatorcert/entrypoints/: add_bundle_to_fbc.py  add_fbc_fragments_to_index.py  apply_test_waivers.py  build_fragment_images.py  bulk_retrigger.py  bundle_dockerfile.py  download_artifacts.py  download_test_results.py  fbc_onboarding.py  get_cert_project_related_data.py  get_preflight_results.py  get_vendor_related_data.py  github_add_comment.py  github_pr.py  github_wait_labels.py  hydra_checklist.py  index.py  invalidate_preflight_versions.py  link_pull_request.py  marketplace_replication.py  merge_base_lane_fingerprint.py  ocp_version_info.py  pipelinerun_summary.py  publish.py  publish_pyxis_image.py  request_signature.py  reserve_operator_name.py  rm_operator_from_index.py  set_github_status.py  support_summary.py  update_cert_project_status.py  upload_artifacts.py  upload_signature.py  validate_catalog_format.py  verify_changed_dirs.py  (+4 more)
pipeline-admin-guide/: index.html
pipeline-env-setup/: index.html
pipelines/: operator-ci-pipeline.yml  operator-hosted-pipeline.yml
preflight-invalidation/: index.html
release-and-rollback/: index.html
schemas/: release-config-schema.json
scripts/: bootstrap-pending-repositories.py  community-quay-migration.py  copy-bundle.sh  promote-catalog.py
search/: search_index.json
skills/: SKILLS.md
tasks/: buildah.yml  cert-project-check.yml  cleanup.yml  digest-pinning.yml  dockerfile-creation.yml  generate-index.yml  get-ci-results-attempt.yml  get-ci-results.yml  get-ci-results1.yml  get-ci-results2.yml  hash-submission-content.yml  ocp-env-cleanup.yml  ocp-env-prep.yml  open-pr.yml  operator-validation.yml  placeholder-rebuild-images.yml  placeholder-run-ci-pipeline.yml  preflight.yml  query-publishing-checklist.yml  reserve-operator-name.yml  submission-validation.yml  upload-artifact.yml  verify-changed-directories.yml  verify-ci-results.yml  verify-pinned-digest.yml
tekton-when-condition-guidelines/: index.html
templates/: crc-pod-template.yml  workspace-template-small.yml  workspace-template.yml
tests/: test_bundle.py  test_github.py  test_iib.py  test_operatorcert.py  test_parsed_file.py  test_pyxis.py  test_tekton.py  test_utils.py
users/: index.html
webhook-dispatcher/: index.html
webhook-dispatecher/: index.html
(+721 files in other folders)
